--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=NUS-ISS-Agile-Team_ceramicraft-merchant-frontend
-sonar.organization=swe5006-group12
+#sonar.projectKey=NUS-ISS-Agile-Team_ceramicraft-merchant-frontend
+#sonar.organization=swe5006-group12
 
 
 # This is the name and version displayed in the SonarCloud UI.
@@ -14,7 +14,9 @@ sonar.organization=swe5006-group12
 #sonar.sourceEncoding=UTF-8
 
 # Coverage exclusions - exclude all files from coverage analysis
-sonar.coverage.exclusions=**/*
+
+
+#sonar.coverage.exclusions=**/*
 
 # Alternative: Exclude specific directories
 # sonar.coverage.exclusions=src/**/*,public/**/*,**/*.spec.ts,**/*.test.ts
